Fixed word wrap on index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -47,6 +47,8 @@
 {
   display:none;
   width: 100%;
+  width: 200px;
+  overflow-wrap: break-word;
 }
 .movieTable th
 {
